--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,7 @@ poetry.toml
 # LSP config files
 pyrightconfig.json
 
+#chroma_db
+chroma_db
+
 # End of https://www.toptal.com/developers/gitignore/api/python
